--- a/app/static/index.html
+++ b/app/static/index.html
@@ -32,7 +32,7 @@
                         <th>Имя файла</th>
                         <th>Длительность</th>
                         <th>Размер</th>
-                        <th>Действие</th>
+                        <th>Действия</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
