--- a/app/static/index.html
+++ b/app/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Логи файлов (LogerAPI)</h1>
+        <h1>whisperAPI Logger</h1>
         <div class="summary-block">
             <span id="totalFiles">Всего файлов: 0</span>
             <span id="totalDuration">Общее время: 0 сек</span>
@@ -38,11 +38,15 @@
                 <tbody></tbody>
             </table>
         </div>
+        <div id="paginationContainer" style="margin: 18px 0; text-align: center;"></div>
         <div id="logModal" class="modal" style="display:none;">
             <div class="modal-content">
                 <span class="close" onclick="closeModal()">&times;</span>
-                <pre id="logText"></pre>
+                <div id="logText"></div>
             </div>
+        </div>
+        <div style="margin-top: 24px; text-align: right;">
+            <button class="open-log-btn" onclick="window.location.href='/static/settings.html'" style="float:right;">Настроить сервис</button>
         </div>
     </div>
     <script src="/static/script.js"></script>
