--- a/app/static/settings.html
+++ b/app/static/settings.html
@@ -44,7 +44,7 @@
                 </label>
             </div>
             <div style="margin-top:12px;text-align:center;">
-                <button type="button" class="open-log-btn" id="rollbackBtn" style="background:#ff5555;">Откатить обновления</button>
+                <button type="button" class="open-log-btn reset-btn" id="rollbackBtn">Откатить обновления</button>
             </div>
             <div style="margin-top:24px;text-align:center;">
                 <button type="submit" class="open-log-btn">Сохранить</button>
